--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="zh-huamt-TW">
+<html lang="zh-Hant-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我是林柏宇</title>
+    <title>產業新尖兵練習範本</title>
 </head>
+
 <body>
     我畢業於逢甲大學經濟學系,興趣是健身看電影
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    <p>This is a single paragraph</p>
+    <p>A paragraph with<br />line break</p>
+    <h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3 style="color: blue">Heading 3</h3>
+<h4 style="font-size: 200px">Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+
+<p title="hint text">This is a single paragraph</p>
+<p><span style="background: blue; color: yellow">A paragraph</span> with<br />line break</p>
+
 </body>
+
 </html>
