--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
 <p title="hint text">This is a single paragraph</p>
 <p><span style="background: blue; color: yellow">A paragraph</span> with<br />line break</p>
+<img src="https://i.imgur.com/QZSEJxb.jpeg" />
+<img src="https://i.imgur.com/QZSEJxb.jpeg">
+
+<img src="https://i.imgur.com/QZSEJxb.jpeg" width="500" height="300" alt="壞掉了壞掉了">
+
 
 </body>
 
