--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
 <h4 style="font-size: 200px">Heading 4</h4>
 <h5>Heading 5</h5>
 <h6>Heading 6</h6>
-
-<p title="hint text">This is a single paragraph</p>
-<p><span style="background: blue; color: yellow">A paragraph</span> with<br />line break</p>
-<img src="https://i.imgur.com/QZSEJxb.jpeg" width="400" height="300" alt="壞掉了壞掉了">
-
+<a href="https://www.facebook.com/">Facebook</a>
 
 </body>
 
