--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h4 style="font-size: 200px">Heading 4</h4>
 <h5>Heading 5</h5>
 <h6>Heading 6</h6>
-<a href="https://www.facebook.com/">Facebook</a>
+<a href="https://www.facebook.com/">GO TO FB target="_blank"</a>
 
 </body>
 
