--- a/index.html
+++ b/index.html
@@ -4,27 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widt>h=device-width, initial-scale=1.0"
     <title>產業新尖兵練習範本</title>
 </head>
 
 <body>
-    我畢業於逢甲大學經濟學系,興趣是健身看電影
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-    <p>This is a single paragraph</p>
-    <p>A paragraph with<br />line break</p>
-    <h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3 style="color: blue">Heading 3</h3>
-<h4 style="font-size: 200px">Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
-
+    <h1>我叫林柏宇·我畢業於逢甲大學經濟學系,興趣是健身看電影</h1>
+    <!--comment-->
+    <br />
+    <a href="https://www.facebook.com/">go to facebook </a>
+    <table border="1">
+        <tr>
+            <th>month</th>
+            <th>saving</th>
+            <th>asdasd</th>
+        </tr>
+        <tr>
+            <td>june</td>
+            <td>100000000</td>
+        </tr>
+        <tr>
+            <td>september</td>
+            <td>21321940812941048124</td>
+        </tr>
+    </table>
+    <ul>
+        <li>coffee</li>
+        <ul>
+            <li>lemon</li>
+            <img src="https://i.imgur.com/8kolGy1.jpeg"
+            <br />
+            甜而不膩，適合老人小孩飲用。
+        </ul>
+        <li>tea</li>
+        <li>juice</li>
+    </ul>
+    <ol>
+        <li>dog</li>
+        <li>cat</li>
+        <li>sheep</li>
+    </ol>
 </body>
 
 </html>
