--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>我叫林柏宇·我畢業於逢甲大學經濟學系,興趣是健身看電影</h1>
     <!--comment-->
     <br />
-    <a href="https://www.facebook.com/">go to facebook </a>
+    <a href="https://www.facebook.com/">facebook </a>
     <table border="1">
         <tr>
             <th>month</th>
