--- a/Exercise/Exercise03/index01.html
+++ b/Exercise/Exercise03/index01.html
@@ -9,7 +9,7 @@
 <body>
     <br>歡迎光臨網頁一</br>
     <img src="https://i.imgur.com/c7IdDK0.mp4" alt="哎呀！壞掉了！">
-    <br><a href="index02.html">前往網頁二</a></br>
+    <br><a href="https://bill0924.github.io/bill123/Exercise/Exercise03/index02.html">前往網頁二</a></br>
     <br>謝謝光臨~</body>
 </body>
 </html>
