--- a/Exercise/Exercise04/index.html
+++ b/Exercise/Exercise04/index.html
@@ -22,5 +22,6 @@
         <li>煮飯</li>
         <li>繳費</li>
       </ul>
+      <br><img src="https://i.imgur.com/TWkaq3P.jpeg" alt="oops!"></body>
 </body>
 </html>
