--- a/Exercise/Exercise03/index03.html
+++ b/Exercise/Exercise03/index03.html
@@ -9,8 +9,8 @@
 <body>
     <br>歡迎光臨網頁三</br>
     <img src="https://i.imgur.com/HHmf4IC.jpg" alt="boom!">
-    <a href="file:///Users/bill/Desktop/project/Exercise/Exercise03/index02.html">回到網頁二</a>
-    <a href="file:///Users/bill/Desktop/project/Exercise/Exercise03/index01.html">回到網頁一</a>
+    <a href="https://bill0924.github.io/bill123/Exercise/Exercise03/index02.html">回到網頁二</a>
+    <a href="https://bill0924.github.io/bill123/Exercise/Exercise03/index01.html">回到網頁一</a>
     <br>謝謝光臨~</body>
 </body>
 </html>
