--- a/Exercise/Exercise04/index.html
+++ b/Exercise/Exercise04/index.html
@@ -23,5 +23,7 @@
         <li>繳費</li>
       </ul>
       <br><img src="https://i.imgur.com/TWkaq3P.jpeg" alt="oops!"></body>
+      <br><a href="https://www.youtube.com">前往youtube</a></br>
+      <br><a href="https://bill0924.github.io/bill123/">前往個人網頁</a>
 </body>
 </html>
