--- a/lab/lab_04.html
+++ b/lab/lab_04.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>課表</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <style type="text/css">
 body{
     font-size: large;font-style: italic;
@@ -41,7 +42,7 @@ th {
         <tbody>
           <tr>
             <td colspan="2">8:00-12:00</td>
-            <td>國文</td>
+            <td <i class="fas fa-book-open"></i>國文</td>
             <td>英文</td>
             <td>數學</td>
             <td>英文</td>
